update code in array practice

--- a/02-Python-for-Data-Analysis-NumPy/practice-array.ipynb
+++ b/02-Python-for-Data-Analysis-NumPy/practice-array.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "f988ab03-af55-405b-9a44-0e5e43a9be6f",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "141c33db-9949-4843-ba45-c980696da473",
    "metadata": {},
    "outputs": [
@@ -690,7 +690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 5,
    "id": "c91b3de0-29f1-4446-bf08-3f25aca1f3fc",
    "metadata": {},
    "outputs": [],
@@ -700,7 +700,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 6,
    "id": "3af62c8f-58bf-4bf2-8196-0eadfa762aa5",
    "metadata": {},
    "outputs": [
@@ -708,8 +708,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[13 16  2  7 13  2  1 11 14 12  2 24  7 14 11  1 18 13 19 16  0 23 14  9\n",
-      " 12]\n"
+      "[ 8  5 20 24 21  8 17 11  5 19 20  7 23 23  4  6 15 14 23  2  9 21 23  0\n",
+      " 17]\n"
      ]
     }
    ],
@@ -719,23 +719,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 7,
    "id": "41059c1e-3bc3-46aa-b488-808e78be1709",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([[ 0,  1,  2,  3,  4],\n",
-       "       [ 5,  6,  7,  8,  9],\n",
-       "       [10, 11, 12, 13, 14],\n",
-       "       [15, 16, 17, 18, 19],\n",
-       "       [20, 21, 22, 23, 24]])"
-      ]
-     },
-     "execution_count": 91,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'arr' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[7], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m arr\u001b[38;5;241m.\u001b[39mreshape(\u001b[38;5;241m5\u001b[39m,\u001b[38;5;241m5\u001b[39m)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'arr' is not defined"
+     ]
     }
    ],
    "source": [
@@ -744,19 +741,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 8,
    "id": "b246a990-828e-4d2e-9de9-2f8576010f78",
    "metadata": {},
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "cannot reshape array of size 25 into shape (2,3)",
+     "ename": "NameError",
+     "evalue": "name 'arr' is not defined",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[92], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m arr\u001b[38;5;241m.\u001b[39mreshape(\u001b[38;5;241m2\u001b[39m,\u001b[38;5;241m3\u001b[39m)\n",
-      "\u001b[1;31mValueError\u001b[0m: cannot reshape array of size 25 into shape (2,3)"
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[8], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m arr\u001b[38;5;241m.\u001b[39mreshape(\u001b[38;5;241m2\u001b[39m,\u001b[38;5;241m3\u001b[39m)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'arr' is not defined"
      ]
     }
    ],
@@ -766,19 +763,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 9,
    "id": "caa090ba-916e-49c7-b977-49c8d2fd3cbc",
    "metadata": {},
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "cannot reshape array of size 25 into shape (5,6)",
+     "ename": "NameError",
+     "evalue": "name 'arr' is not defined",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[93], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m arr\u001b[38;5;241m.\u001b[39mreshape(\u001b[38;5;241m5\u001b[39m,\u001b[38;5;241m6\u001b[39m)\n",
-      "\u001b[1;31mValueError\u001b[0m: cannot reshape array of size 25 into shape (5,6)"
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[9], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m arr\u001b[38;5;241m.\u001b[39mreshape(\u001b[38;5;241m5\u001b[39m,\u001b[38;5;241m6\u001b[39m)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'arr' is not defined"
      ]
     }
    ],
@@ -788,7 +785,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 10,
    "id": "85e4b011-5a4c-42a7-9a3c-a4fa7b755dc1",
    "metadata": {},
    "outputs": [
@@ -796,8 +793,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[13 16  2  7 13  2  1 11 14 12  2 24  7 14 11  1 18 13 19 16  0 23 14  9\n",
-      " 12]\n"
+      "[ 8  5 20 24 21  8 17 11  5 19 20  7 23 23  4  6 15 14 23  2  9 21 23  0\n",
+      " 17]\n"
      ]
     }
    ],
@@ -807,7 +804,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 11,
    "id": "4b37c987-2cce-4c2e-86f6-e96b55cd9033",
    "metadata": {},
    "outputs": [
@@ -825,7 +822,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 12,
    "id": "aab9c8d9-3276-4ec9-8d34-f6b09110644e",
    "metadata": {},
    "outputs": [
@@ -843,7 +840,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 13,
    "id": "8469b79f-c715-4558-8ebd-c79d467a301f",
    "metadata": {},
    "outputs": [
@@ -851,7 +848,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "index of max : 11\n"
+      "index of max : 3\n"
      ]
     }
    ],
@@ -861,7 +858,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 14,
    "id": "e3be994d-3b1e-4caf-b716-23bd453c0f8d",
    "metadata": {},
    "outputs": [
@@ -869,12 +866,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "20\n"
+      "index of min : 23 \n"
      ]
     }
    ],
    "source": [
-    "print(ranarr.argmin())"
+    "print(\"index of min : {} \".format(ranarr.argmin()))"
    ]
   },
   {
