update indexing in numpy

--- a/02-Python-for-Data-Analysis-NumPy/practice-indexing.ipynb
+++ b/02-Python-for-Data-Analysis-NumPy/practice-indexing.ipynb
@@ -1,9 +1,17 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "c6b9fbbf-c3d2-4194-bf3b-8853c4c3c81e",
+   "metadata": {},
+   "source": [
+    "# 1D array"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "03ce3d2a-45fb-4237-952d-4f58d01c24cf",
+   "execution_count": 37,
+   "id": "337489a6-77ad-4ad5-b073-7070d7dd7f37",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,8 +20,692 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "703f78a4-ab2c-40a6-b565-f12365a4bf91",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "arr = np.arange(4,28,3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "ae8597b7-af9e-46b3-8282-eb9a50b8f642",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 4  7 10 13 16 19 22 25]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(arr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "7ac47ef6-6311-4f38-8776-02a33df41d31",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 4,  7, 10, 13, 16])"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr[0:5]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "3848aa00-9573-4525-8996-82d332a756c8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.int64(13)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr[3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "1a82908e-e1b0-4c6c-91f5-7e4e3697d888",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([13, 16, 19, 22, 25])"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr[3:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "12231c6e-be13-4450-88d5-1f8e49ae9b01",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([25])"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr[7:8]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "f4dca32e-9e5a-4cb9-a51f-e93750b74404",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "arr[:5]=100"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "b99812f8-6505-42d8-a8cc-91c5f2d0a093",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([100, 100, 100, 100, 100,  19,  22,  25])"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "e86da53b-7613-40f8-9136-b594890ae1cd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "arr = np.arange(0,11)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "da6a37d9-d40b-4787-bbfa-125fa9007554",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 0,  1,  2,  3,  4,  5,  6,  7,  8,  9, 10])"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "7e5fa13e-8016-4f57-95d3-a791994af824",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "slice_arr = arr[:5]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "482b1866-fa72-4374-b595-2038089f84ef",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0, 1, 2, 3, 4])"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "slice_arr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "b95c5a97-7530-4a06-91b2-263a0ee6975b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "slice_arr[:]=1000"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "27beb381-68c5-4f0d-b253-3d48b090333d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1000, 1000, 1000, 1000, 1000])"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "slice_arr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "c503c8b7-5b72-40bc-a0ca-7462d58637fa",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1000, 1000, 1000, 1000, 1000,    5,    6,    7,    8,    9,   10])"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "9150219b-ee02-4998-812b-80a6b468d4f0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "arr[1:3]=99"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "379e79d6-5e0e-4456-bcb4-c294ee80010a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1000,   99,   99, 1000, 1000])"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "slice_arr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "5197b230-7a8b-45d7-b29d-9f1491bd34ea",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "arr_1=np.arange(0,11)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "f5b411f1-3150-4cec-b164-5b4827e14572",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 0,  1,  2,  3,  4,  5,  6,  7,  8,  9, 10])"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr_1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "b9b927f5-743e-4357-b484-837a7f9a0b43",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 0,  1,  2,  3,  4,  5,  6,  7,  8,  9, 10])"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr_2=arr_1.copy()\n",
+    "arr_2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "e6119c1b-6b40-494b-9114-35bdbb3c1933",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "slice_arr2=arr_2[:8]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "5ed48aa3-f6cc-4db7-bf71-3fbd40c401d8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "slice_arr2[:]=111"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "ea803ab1-ead4-4f64-a068-7ee59063d642",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([111, 111, 111, 111, 111, 111, 111, 111])"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "slice_arr2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "2c43e165-984b-4780-b89a-487014b7ec94",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([111, 111, 111, 111, 111, 111, 111, 111,   8,   9,  10])"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr_2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "6b1d7766-6ff8-4d5c-8067-3084f20c380c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 0,  1,  2,  3,  4,  5,  6,  7,  8,  9, 10])"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr_1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2475de4a-b899-4dd4-abf9-2069cfb03a8e",
+   "metadata": {},
+   "source": [
+    "# 2D array"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "044f4f4f-8bd6-42fb-bf5b-219f39c2cf6c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "arr_2d = np.array([[5,10,15],[25,30,35],[45,50,55]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "9a1e239b-aca6-4b2b-9610-d581a1bff36e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 5, 10, 15],\n",
+       "       [25, 30, 35],\n",
+       "       [45, 50, 55]])"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr_2d"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "37a66fa1-6a9f-4f63-a717-f106b19e823d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.int64(5)"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr_2d[0][0] #to access element matrix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "3f5f52db-a297-4850-bdea-1fdef12ce596",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.int64(10)"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr_2d[0,1] #to access element matrix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "id": "cf792a4f-8c17-4a89-abb2-96039428e41b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[30],\n",
+       "       [50]])"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr_2d[1:,1:2]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4b4e55dd-d62e-402f-bf03-7b915950d05c",
+   "metadata": {},
+   "source": [
+    "# conditional selection"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "id": "5b6be4a3-e798-4989-b791-c959da7de7ed",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "arr = np.arange(0,11)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "id": "b541383d-2fc0-4ad1-858c-a3540ce43b6f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 0,  1,  2,  3,  4,  5,  6,  7,  8,  9, 10])"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "id": "5c6456d0-7c28-4a0a-81e1-b249ab2f9b97",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bool_arr = arr>5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "id": "2d7a9912-50f8-4632-a2fe-bd29909fd821",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([False, False, False, False, False, False,  True,  True,  True,\n",
+       "        True,  True])"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bool_arr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "id": "7e7bfcea-9cb2-49af-bfb2-360324b5e882",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 0,  1,  2,  3,  4,  5,  6,  7,  8,  9, 10])"
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "id": "482d8aea-6af1-4953-a10a-9f7ad7fafe1b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 6,  7,  8,  9, 10])"
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr[bool_arr]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "id": "f2273365-1031-4d27-a5b0-4ab7f1bfd426",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 6,  7,  8,  9, 10])"
+      ]
+     },
+     "execution_count": 80,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr[arr>5]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "id": "f75c6307-9abe-4395-8837-44d36bbd57b4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 0,  1,  2,  3,  4,  5,  6,  7,  8,  9, 10])"
+      ]
+     },
+     "execution_count": 81,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "01612663-1723-4f77-8a9b-545e9ec621bd",
    "metadata": {},
    "outputs": [],
    "source": []
