Fix numpy indexing explanation and examples

--- a/02-Python-for-Data-Analysis-NumPy/practice-array.ipynb
+++ b/02-Python-for-Data-Analysis-NumPy/practice-array.ipynb
@@ -871,13 +871,23 @@
     }
    ],
    "source": [
-    "print(\"index of min : {} \".format(ranarr.argmin()))"
+    "print(\"min\".format(ranarr.argmin()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "1808ce6d-aac6-4470-b721-ae5ea774cba4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# check git hub yesterday work"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1808ce6d-aac6-4470-b721-ae5ea774cba4",
+   "id": "53fcbab5-48d2-4daa-9813-2073f639c11c",
    "metadata": {},
    "outputs": [],
    "source": []
