Minor cleanup in numpy practice array notebook

--- a/02-Python-for-Data-Analysis-NumPy/practice-array.ipynb
+++ b/02-Python-for-Data-Analysis-NumPy/practice-array.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "f988ab03-af55-405b-9a44-0e5e43a9be6f",
    "metadata": {},
    "outputs": [],
@@ -858,7 +858,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "id": "e3be994d-3b1e-4caf-b716-23bd453c0f8d",
    "metadata": {},
    "outputs": [
@@ -866,12 +866,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "index of min : 23 \n"
+      "min 9\n"
      ]
     }
    ],
    "source": [
-    "print(\"min\".format(ranarr.argmin()))"
+    "print(\"min {}\".format(ranarr.argmin()))"
    ]
   },
   {
