--- a/02-Python-for-Data-Analysis-NumPy/practice-array.ipynb
+++ b/02-Python-for-Data-Analysis-NumPy/practice-array.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "f988ab03-af55-405b-9a44-0e5e43a9be6f",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "141c33db-9949-4843-ba45-c980696da473",
    "metadata": {},
    "outputs": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "5fdb962c-d87f-497d-adf6-88054aaba9b2",
    "metadata": {},
    "outputs": [],
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "f6e907fc-7a43-4b29-a01b-001722d8b5cf",
    "metadata": {},
    "outputs": [
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "id": "19b91ec5-43fa-4bcb-9e01-f11fca660091",
    "metadata": {},
    "outputs": [],
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "id": "d409996e-6a26-4698-81c5-abc519d65f7f",
    "metadata": {},
    "outputs": [],
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "id": "fbefcdbf-98aa-41c9-a692-77ce923cd3e0",
    "metadata": {},
    "outputs": [
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 18,
    "id": "615b8701-2441-496b-93d9-bed2974fd6ab",
    "metadata": {},
    "outputs": [
@@ -135,7 +135,7 @@
        "array([0., 1., 2., 3.])"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -661,7 +661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 19,
    "id": "15a31186-9233-4651-a004-df31010ba67b",
    "metadata": {},
    "outputs": [],
@@ -671,7 +671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 20,
    "id": "8d4fe065-f639-4e17-a1b3-d782a90b2368",
    "metadata": {},
    "outputs": [
@@ -690,7 +690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 21,
    "id": "c91b3de0-29f1-4446-bf08-3f25aca1f3fc",
    "metadata": {},
    "outputs": [],
@@ -700,7 +700,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 22,
    "id": "3af62c8f-58bf-4bf2-8196-0eadfa762aa5",
    "metadata": {},
    "outputs": [
@@ -708,8 +708,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 8  5 20 24 21  8 17 11  5 19 20  7 23 23  4  6 15 14 23  2  9 21 23  0\n",
-      " 17]\n"
+      "[ 1  8  6 15  2 12 18 15 13  7 11 23 19 16 18  9 21 21  9  6 17 21  2 19\n",
+      " 20]\n"
      ]
     }
    ],
@@ -719,20 +719,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 23,
    "id": "41059c1e-3bc3-46aa-b488-808e78be1709",
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'arr' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[7], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m arr\u001b[38;5;241m.\u001b[39mreshape(\u001b[38;5;241m5\u001b[39m,\u001b[38;5;241m5\u001b[39m)\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'arr' is not defined"
-     ]
+     "data": {
+      "text/plain": [
+       "array([[ 0,  1,  2,  3,  4],\n",
+       "       [ 5,  6,  7,  8,  9],\n",
+       "       [10, 11, 12, 13, 14],\n",
+       "       [15, 16, 17, 18, 19],\n",
+       "       [20, 21, 22, 23, 24]])"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -741,19 +744,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 24,
    "id": "b246a990-828e-4d2e-9de9-2f8576010f78",
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'arr' is not defined",
+     "ename": "ValueError",
+     "evalue": "cannot reshape array of size 25 into shape (2,3)",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[8], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m arr\u001b[38;5;241m.\u001b[39mreshape(\u001b[38;5;241m2\u001b[39m,\u001b[38;5;241m3\u001b[39m)\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'arr' is not defined"
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[24], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m arr\u001b[38;5;241m.\u001b[39mreshape(\u001b[38;5;241m2\u001b[39m,\u001b[38;5;241m3\u001b[39m)\n",
+      "\u001b[1;31mValueError\u001b[0m: cannot reshape array of size 25 into shape (2,3)"
      ]
     }
    ],
@@ -763,19 +766,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 25,
    "id": "caa090ba-916e-49c7-b977-49c8d2fd3cbc",
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'arr' is not defined",
+     "ename": "ValueError",
+     "evalue": "cannot reshape array of size 25 into shape (5,6)",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[9], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m arr\u001b[38;5;241m.\u001b[39mreshape(\u001b[38;5;241m5\u001b[39m,\u001b[38;5;241m6\u001b[39m)\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'arr' is not defined"
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[25], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m arr\u001b[38;5;241m.\u001b[39mreshape(\u001b[38;5;241m5\u001b[39m,\u001b[38;5;241m6\u001b[39m)\n",
+      "\u001b[1;31mValueError\u001b[0m: cannot reshape array of size 25 into shape (5,6)"
      ]
     }
    ],
