Add missing-data practice file

--- a/03-Python-for-Data-Analysis-Pandas/practice-dataframe.ipynb
+++ b/03-Python-for-Data-Analysis-Pandas/practice-dataframe.ipynb
@@ -2914,25 +2914,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 128,
    "id": "7e5dfd20-f49f-4cc6-b2db-d878438b2b13",
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'num' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[127], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# if i want row 1 fronm both g1 and g2 \u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m df\u001b[38;5;241m.\u001b[39mxs(\u001b[38;5;241m1\u001b[39m,level\u001b[38;5;241m=\u001b[39mnum)\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'num' is not defined"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>A</th>\n",
+       "      <th>B</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Groups</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>G1</th>\n",
+       "      <td>-1.005187</td>\n",
+       "      <td>-0.741790</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>G2</th>\n",
+       "      <td>0.961458</td>\n",
+       "      <td>-2.141212</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               A         B\n",
+       "Groups                    \n",
+       "G1     -1.005187 -0.741790\n",
+       "G2      0.961458 -2.141212"
+      ]
+     },
+     "execution_count": 128,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "# if i want row 1 fronm both g1 and g2 \n",
-    "df.xs(1,level=num)"
+    "df.xs(1,level='Num')"
    ]
   },
   {
