add groupby practice file

--- a/03-Python-for-Data-Analysis-Pandas/practice-missing data.ipynb
+++ b/03-Python-for-Data-Analysis-Pandas/practice-missing data.ipynb
@@ -470,8 +470,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "c882cfac-345b-4eb8-9b65-2b9d0e5617ac",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    1.0\n",
+       "1    2.0\n",
+       "2    1.5\n",
+       "Name: A, dtype: float64"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['A'].fillna(value=df['A'].mean())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "17a93252-b69d-42e5-a2e0-f6d7f47cd46c",
    "metadata": {},
    "outputs": [],
    "source": []
